force-app/main/default/objects/Partner_Performance_Review__c/Partner_Performance_Review__c.object-meta.xml
<CustomObject>
    <label>Partner Performance Review</label>
    <nameField>
        <displayFormat>PI-{0000}</displayFormat>
        <label>Partner Performance Review Id</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Partner Performance Reviews</pluralLabel>
    <sharingModel>ControlledByParent</sharingModel>
</CustomObject>