force-app/main/default/objects/Partner_Performance_Review__c/fields/Overall_Feedback__c.field-meta.xml
<CustomField>
    <fullName>Overall_Feedback__c</fullName>
    <label>Overall Feedback</label>
    <length>32768</length>
    <type>Html</type>
</CustomField>