force-app/main/default/objects/Partner_Performance_Review__c/fields/Overall_rating__c.field-meta.xml
<CustomField>
    <fullName>Overall_rating__c</fullName>
    <inlineHelpText>1 being low; 5 being high</inlineHelpText>
    <label>Overall rating</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>1</fullName>
            </value>
            <value>
                <fullName>2</fullName>
            </value>
            <value>
                <fullName>3</fullName>
            </value>
            <value>
                <fullName>4</fullName>
            </value>
            <value>
                <fullName>5</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>