force-app/main/default/objects/Partner_Performance_Review__c/fields/Partner_Business_Planning__c.field-meta.xml
<CustomField>
    <fullName>Partner_Business_Planning__c</fullName>
    <label>Partner Business Planning</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>Good</fullName>
            </value>
            <value>
                <fullName>Average</fullName>
            </value>
            <value>
                <fullName>Needs Improvement</fullName>
            </value>
            <value>
                <fullName>Low Quality</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>