force-app/main/default/objects/Partner_Performance_Review__c/fields/Partner_Implementation_Description__c.field-meta.xml
<CustomField>
    <fullName>Partner_Implementation_Description__c</fullName>
    <label>Partner Implementation Description</label>
    <type>TextArea</type>
</CustomField>