force-app/main/default/objects/Partner_Performance_Review__c/fields/Partner_Quality__c.field-meta.xml
<CustomField>
    <fullName>Partner_Quality__c</fullName>
    <label>Partner Quality</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>Red</fullName>
            </value>
            <value>
                <fullName>Amber</fullName>
            </value>
            <value>
                <fullName>Green</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>